--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "UManager",
+  "name": "umanager",
   "version": "1.0.0",
   "description": "A file manager with support for tags",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "lint":"./node_modules/.bin/node-lint"
   },
   "author": "Ushira Karunasena",
   "license": "ISC",
   "devDependencies": {
     "electron": "^4.0.4",
     "electron-packager": "^13.0.1"
+  },
+  "dependencies": {
   }
 }
