--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "lint":"./node_modules/.bin/node-lint"
+    "lint": "./node_modules/.bin/node-lint"
   },
   "author": "Ushira Karunasena",
   "license": "ISC",
@@ -14,5 +14,6 @@
     "electron-packager": "^13.0.1"
   },
   "dependencies": {
+    "electron-prompt": "^1.3.0"
   }
 }
