--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron-packager": "^13.0.1"
   },
   "dependencies": {
-    "electron-prompt": "^1.3.0"
+    "electron-prompt": "^1.3.0",
+    "file-icons-js": "^1.0.3"
   }
 }
