--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "lint": "./node_modules/.bin/node-lint"
+    "lint": "./node_modules/.bin/node-lint",
+    "test": "electron-mocha"
   },
   "author": "Ushira Karunasena",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "electron": "^4.0.4",
-    "electron-packager": "^13.0.1"
+    "electron-mocha": "^8.0.1",
+    "electron-packager": "^13.0.1",
+    "fake-indexeddb": "^2.1.0",
+    "spectron": "^5.0.0"
   },
   "dependencies": {
     "electron-prompt": "^1.3.0",
