--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "electron-prompt": "^1.3.0",
-    "file-icons-js": "^1.0.3"
+    "file-icons-js": "^1.0.3",
+    "simple-thumbnail": "^1.5.1"
   }
 }
